<resources>
    <string name="app_name">SimpleCalculator</string>
    <string name="calculation">Calculation</string>
    <string name="number_1">Number 1:</string>
    <string name="number_2">Number 2:</string>
    <string name="add">Add</string>
    <string name="subtract">Subtract</string>
    <string name="divide">Divide</string>
    <string name="multiply">Multiply</string>
    <string name="exit">Exit</string>
    <string name="show">Show</string>
</resources>