<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_calculation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/calculation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_number_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/number_1"
        app:layout_constraintEnd_toStartOf="@id/edit_text_number_1"
        app:layout_constraintTop_toBottomOf="@+id/txt_calculation"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/edit_text_number_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@id/txt_number_1"
        app:layout_constraintTop_toBottomOf="@id/txt_calculation"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txt_number_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/number_2"
        app:layout_constraintEnd_toStartOf="@id/edit_text_number_2"
        app:layout_constraintTop_toBottomOf="@+id/txt_number_1"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/edit_text_number_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@id/txt_number_1"
        app:layout_constraintTop_toBottomOf="@id/txt_number_1"
        app:layout_constraintEnd_toEndOf="parent" />

    <RadioGroup
        android:id="@+id/rd_group_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/txt_number_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbtn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_marginEnd="8dp"/>

        <RadioButton
            android:id="@+id/rbtn_subtract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtract"
            android:layout_marginEnd="8dp"/>

        <RadioButton
            android:id="@+id/rbtn_divide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divide"
            android:layout_marginEnd="8dp"/>

        <RadioButton
            android:id="@+id/rbtn_multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiply" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_calculate"
        android:text="@string/divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rd_group_1"
        app:layout_constraintEnd_toStartOf="@id/btn_exit"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btn_exit"
        android:text="@string/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/btn_calculate"
        app:layout_constraintTop_toBottomOf="@id/rd_group_1"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>